package behavioral.observer.after;

public interface OrderObserver {
    void update(Order order);
}
